@@ -2,6 +2,11 @@ sqpack 1.0.3
 ------------
 
 ----- cvs ci ------
+Fri Nov 18  14:19:00
+Fedor:
++ purge Jam areas (from Vlad Pluzhnikov).
+
+----- cvs ci ------
 Thu Oct 16 13:40:00 MET DST 1999
 sms:
 - reorganized Makefiles, please read README.Makefiles in the husky-common
